changed plausible script

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;500;600&display=swap">
-    <script defer data-domain="preview--genie-slack-connect.lovable.app" src="https://plausible.io/js/script.js"></script>
+    <script defer data-domain="genie-slack-connect.lovable.app" src="https://plausible.io/js/script.js"></script>
     <title>Genie</title>
   </head>
   <body>
